--- a/Examples/NS_Equation_spec.ipynb
+++ b/Examples/NS_Equation_spec.ipynb
@@ -69,7 +69,7 @@
     "# Dataset Configuration\n",
     "# -----------------------------\n",
     "# Define the root directory for Navier-Stokes dataset (modify as needed)\n",
-    "data_root = \"/Users/xuhaohan/Desktop/neuraloperator-main/neuralop/data/datasets/data\"  # 修改为你的数据路径\n",
+    "data_root = \"/Users/xuhaohan/Desktop/neuraloperator-main/neuralop/data/datasets/data\"  ",
     "train_resolution = 128  # Spatial resolution for training data\n",
     "test_resolutions = [128]  # Spatial resolution for test data\n",
     "n_train = 10  # Number of training samples\n",
